--- a/src/assets/css/norm.scss
+++ b/src/assets/css/norm.scss
@@ -128,6 +128,10 @@ h6 {
 }
 
 @media screen and (max-width: 600px) {
+	h1 {
+		font-size: 44px;
+		line-height: 64px;
+	}
 	h2 {
 		font-size: 36px;
     	line-height: 50px;
