--- a/src/assets/css/pages/features.scss
+++ b/src/assets/css/pages/features.scss
@@ -2,146 +2,131 @@
 @import '@/assets/css/vars.scss';
 
 .features {
-    padding: 84px 0;
-    h2 {
-        text-align: center;
-        width: 50%;
-        margin: 0 auto;
-        margin-bottom: 48px;
-    }
+	padding: 84px 0;
+	h2 {
+		text-align: center;
+		width: 50%;
+		margin: 0 auto;
+		margin-bottom: 48px;
+	}
 }
 
-.features_users {
-    display: flex;
-    gap: 89px;
-    align-items: center;
-    margin-bottom: 96px;
-}
-
-.features_users_numbers h5 {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 28px;
-    color: $dark-blue;
-    opacity: 0.7;
-}
-
-.features_users_logos {
-    display: flex;
-    gap: 70px;
-    img {
-        width: 100%;
-        height: 100%;
-        opacity: 0.7;
-        &:hover {
-            opacity: 1;
-        }
-    }
+.features_wrap {
+	margin-bottom: 96px;
 }
 
 .features_grid {
-    display: grid;
-    grid-template: 1fr / 1fr 1fr 1fr;
-    gap: 32px;
-    margin-bottom: 48px;
-    .features_card {
-        background-color: $grey;
-        padding: 48px 32px 42px 48px;
-        img {
-            padding-bottom: 25px;
-        }
-        h6 {
-            padding-bottom: 12px;
-        }
-        p {
-            line-height: 28px;
-            color: rgba(40, 41, 56, 0.7)
-        }
-    }
+	display: grid;
+	grid-template: 1fr / 1fr 1fr 1fr;
+	gap: 32px;
+	margin-bottom: 48px;
+	.features_card {
+		background-color: $grey;
+		padding: 48px 32px 42px 48px;
+		img {
+			padding-bottom: 25px;
+		}
+		h6 {
+			padding-bottom: 12px;
+		}
+		p {
+			line-height: 28px;
+			color: rgba(40, 41, 56, 0.7)
+		}
+	}
 }
 
 // our approach
 
 .our_approach {
-    padding: 128px 0;
+	padding: 128px 0;
 }
 
 .our_approach_no_ptop {
-    padding-bottom: 128px;
-}
-
-.our_approach_flex {
-    display: flex;
-    gap: 70px;
+	padding-bottom: 128px;
 }
 
 .our_approach_descr {
-    padding-top: 40px;
-    h4 {
-        font-size: 18px;
-        line-height: 32px;
-        color: $dark-blue;
-        margin-bottom: 22px;
-    }
-    h3 {
-        margin-bottom: 30px;
-    }
+	padding-top: 40px;
+	h4 {
+		font-size: 18px;
+		line-height: 32px;
+		color: $dark-blue;
+		margin-bottom: 22px;
+	}
+	h3 {
+		margin-bottom: 30px;
+	}
 }
 
 .our_approach_img { 
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    img {
-        height: 100%;
-        width: 100%;
-    }
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	img {
+		height: 100%;
+		width: 100%;
+	}
 }
 
 .our_approach_grey {
-    background-color: $grey;
+	background-color: $grey;
 }
 
 .our_approach_yellow {
-    background-color: $light-yellow;
+	background-color: $light-yellow;
 }
 
 
 // responsive 
 
 @media screen and (max-width: 1100px) {
-    .features_grid {
-        grid-template: 1fr / 1fr 1fr;
-    }
-    .our_approach {
-        padding: 64px 0;
-    }
-    .our_approach_flex {
-        flex-wrap: wrap;
-        gap: 30px;
-    }
+	.features_grid {
+		grid-template: 1fr / 1fr 1fr;
+	}
+	.our_approach {
+		padding: 64px 0;
+	}
+	.our_approach_flex {
+		flex-wrap: wrap;
+		gap: 30px;
+	}
 }
 
 @media screen and (max-width: 1000px) {
-    .hero_text {
-        width: 100%;
-    }
-    .hero_img {
-        display: none;
-    }
-    .features {
-        padding: 64px 0;
-    }
+	.hero_text {
+		width: 100%;
+	}
+	.hero_img {
+		display: none;
+	}
+	.features {
+		padding: 64px 0;
+	}
+	.our_approach_no_ptop {
+		padding: 64px 0;
+	}
 }
 
 @media screen and (max-width: 800px) {
-    .features h2 {
-        width: 100%;
-    }
-    .features_grid {
-        grid-template: 1fr 1fr / 1fr;
-    }
-    .our_approach .container {
-        padding: 64px 0;
-    }
+	.features_wrap {
+		margin-bottom: 40px;
+	}
+	.features h2 {
+		width: 100%;
+	}
+	.features_grid {
+		grid-template: 1fr 1fr / 1fr;
+	}
+	.our_approach .container {
+		padding: 64px 0;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.features, 
+	.our_approach_no_ptop,
+	.our_approach .container {
+		padding: 32px 0 0;
+	}
 }
