--- a/src/assets/css/pages/blogs.scss
+++ b/src/assets/css/pages/blogs.scss
@@ -63,7 +63,7 @@
 
 .blog_card_wrap {
 	display: grid;
-	grid-template: 1fr 1fr / 1fr 1fr 1fr;
+	grid-template: repeat(auto-fit, minmax(400px, 1fr)) / repeat(auto-fit, minmax(350px, 1fr));
 	gap: 32px;
 	margin-bottom: 48px;
 }
@@ -106,6 +106,7 @@
 		text-align: justify;
 		opacity: 0.7;
 		margin-bottom: 32px;
+		word-wrap: break-word;
 	}
 	.arrow_btn {
 		display: inline-block;
@@ -141,12 +142,12 @@
 		padding: 64px 0;
 	}
 	.blog_card_wrap {
-		grid-template: 1fr / 1fr 1fr;
-		.blog_card {
-			width: 100%;
-			justify-content: center;
-			align-items: center;
-		}
+		grid-template: repeat(auto-fit, minmax(400px, 1fr)) / repeat(auto-fit, minmax(300px, 1fr));
+	}
+	.blog_card {
+		width: 100%;
+		justify-content: center;
+		align-items: center;
 	}
 }
 
@@ -162,9 +163,6 @@
 
 @media screen and (max-width: 500px) {
 	.blog_card_wrap {
-		grid-template: 1fr / 1fr;
-		.blog_card {
-			width: 100%;
-		}
+		grid-template: repeat(auto-fit, minmax(400px, 1fr)) / repeat(auto-fit, minmax(280px, 1fr));
 	}
 }
